--- a/Map page 2.html
+++ b/Map page 2.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Map of Camp</title>
+	<title>mission 2</title>
 </head>
-<body>
-	<p>This is a map of the campsite.</p>
-	<p>From the HIGH ROPES course, draw your finger south east.</p>
-	<p>Enter the first location you get to in the location box.</p>
-	<p>You will find your next challenge here.</p>
-	<p>(North is the Up, South is down)</p>
-<script>
-  	function checkPassword() {
-   	var password = document.getElementById("passwordBox");
-   	var passwordText = password.value;
-   	if(passwordText == "FIRE AREA") {
-    	return true;
-   	}
-   	alert("Access denied! Incorrect password!");
-   	return false;
-  	 }
+<div style="color: black;font-size: 56pt; text-align: center;">
+   <p class="text"><b></b></p>
+<p>Challenge 2<p>
+</div>	
+ <script>
+  function checkPassword() {
+   var password = document.getElementById("passwordBox");
+   var passwordText = password.value;
+   if(passwordText == "PGK") {
+    return true;
+   }
+   alert("Wrong answer, TRY AGAIN!");
+   return false;
+   }
  </script>
-	<img src="Map of camp.JPG"alt="Camp" usemap="#Camp" style="height: 600px; width: 75%;"/> 	    
+	<p>Answer:<input id="passwordBox" type="password"/></p>
+	<a href="second clue.html" onclick="return checkPassword();">
+	Click here to submit.
+<div style="background-color: white;color: black; height: 80%%; width: 100%; font-size: 25pt;">
+<p class="text">(Use capital letters) Enter the first letter of each of the missing words to gain further information.
+</p>
+<img src="the scout promise.png"alt="Camp" style="height: 400px; width: 50%;"/> 	
+</div>
 </body>
-</html>
